parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> statement ;
Rule 5     instruction -> IF ( rel_expression ) instruction ELSE instruction
Rule 6     instruction -> IF ( rel_expression ) instruction
Rule 7     instruction -> FOR variable ASSIGN expression : expression instruction
Rule 8     instruction -> WHILE ( rel_expression ) instruction
Rule 9     instruction -> { instructions }
Rule 10    statement -> PRINT expression
Rule 11    statement -> PRINT multiple_expressions
Rule 12    statement -> RETURN expression
Rule 13    statement -> RETURN
Rule 14    statement -> CONTINUE
Rule 15    statement -> BREAK
Rule 16    statement -> assignable ASSIGN expression
Rule 17    statement -> assignable ADDASSIGN expression
Rule 18    statement -> assignable SUBASSIGN expression
Rule 19    statement -> assignable MULASSIGN expression
Rule 20    statement -> assignable DIVASSIGN expression
Rule 21    rel_expression -> expression EQ expression
Rule 22    rel_expression -> expression GT expression
Rule 23    rel_expression -> expression LT expression
Rule 24    rel_expression -> expression GE expression
Rule 25    rel_expression -> expression LE expression
Rule 26    rel_expression -> expression NE expression
Rule 27    expression -> expression ADD expression
Rule 28    expression -> expression SUB expression
Rule 29    expression -> expression MUL expression
Rule 30    expression -> expression DIV expression
Rule 31    expression -> expression DOTADD expression
Rule 32    expression -> expression DOTSUB expression
Rule 33    expression -> expression DOTMUL expression
Rule 34    expression -> expression DOTDIV expression
Rule 35    expression -> SUB expression
Rule 36    expression -> expression TRANSPOSE
Rule 37    expression -> INTNUM
Rule 38    expression -> FLOATNUM
Rule 39    expression -> STRING
Rule 40    expression -> assignable
Rule 41    assignable -> variable
Rule 42    assignable -> reference
Rule 43    reference -> variable [ expression ]
Rule 44    reference -> variable [ multiple_expressions ]
Rule 45    variable -> ID
Rule 46    expression -> ( expression )
Rule 47    expression -> vector
Rule 48    expression -> matrix
Rule 49    matrix -> ONES ( expression )
Rule 50    matrix -> ONES ( expression , expression )
Rule 51    matrix -> ZEROS ( expression )
Rule 52    matrix -> ZEROS ( expression , expression )
Rule 53    matrix -> EYE ( expression )
Rule 54    matrix -> EYE ( expression , expression )
Rule 55    vector -> [ expression ]
Rule 56    vector -> [ multiple_expressions ]
Rule 57    multiple_expressions -> expression , expression
Rule 58    multiple_expressions -> multiple_expressions , expression

Terminals, with rules where they appear

(                    : 5 6 8 46 49 50 51 52 53 54
)                    : 5 6 8 46 49 50 51 52 53 54
,                    : 50 52 54 57 58
:                    : 7
;                    : 4
ADD                  : 27
ADDASSIGN            : 17
ASSIGN               : 7 16
BREAK                : 15
CONTINUE             : 14
DIV                  : 30
DIVASSIGN            : 20
DOTADD               : 31
DOTDIV               : 34
DOTMUL               : 33
DOTSUB               : 32
ELSE                 : 5
EQ                   : 21
EYE                  : 53 54
FLOATNUM             : 38
FOR                  : 7
GE                   : 24
GT                   : 22
ID                   : 45
IF                   : 5 6
INTNUM               : 37
LE                   : 25
LT                   : 23
MUL                  : 29
MULASSIGN            : 19
NE                   : 26
ONES                 : 49 50
PRINT                : 10 11
RETURN               : 12 13
STRING               : 39
SUB                  : 28 35
SUBASSIGN            : 18
TRANSPOSE            : 36
WHILE                : 8
ZEROS                : 51 52
[                    : 43 44 55 56
]                    : 43 44 55 56
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

assignable           : 16 17 18 19 20 40
expression           : 7 7 10 12 16 17 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 43 46 49 50 50 51 52 52 53 54 54 55 57 57 58
instruction          : 2 3 5 5 6 7 8
instructions         : 1 2 9
matrix               : 48
multiple_expressions : 11 44 56 58
program              : 0
reference            : 42
rel_expression       : 5 6 8
statement            : 4
variable             : 7 41 43 44
vector               : 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . statement ;
    (5) instruction -> . IF ( rel_expression ) instruction ELSE instruction
    (6) instruction -> . IF ( rel_expression ) instruction
    (7) instruction -> . FOR variable ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( rel_expression ) instruction
    (9) instruction -> . { instructions }
    (10) statement -> . PRINT expression
    (11) statement -> . PRINT multiple_expressions
    (12) statement -> . RETURN expression
    (13) statement -> . RETURN
    (14) statement -> . CONTINUE
    (15) statement -> . BREAK
    (16) statement -> . assignable ASSIGN expression
    (17) statement -> . assignable ADDASSIGN expression
    (18) statement -> . assignable SUBASSIGN expression
    (19) statement -> . assignable MULASSIGN expression
    (20) statement -> . assignable DIVASSIGN expression
    (41) assignable -> . variable
    (42) assignable -> . reference
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 16

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    statement                      shift and go to state 4
    variable                       shift and go to state 7
    assignable                     shift and go to state 14
    reference                      shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . statement ;
    (5) instruction -> . IF ( rel_expression ) instruction ELSE instruction
    (6) instruction -> . IF ( rel_expression ) instruction
    (7) instruction -> . FOR variable ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( rel_expression ) instruction
    (9) instruction -> . { instructions }
    (10) statement -> . PRINT expression
    (11) statement -> . PRINT multiple_expressions
    (12) statement -> . RETURN expression
    (13) statement -> . RETURN
    (14) statement -> . CONTINUE
    (15) statement -> . BREAK
    (16) statement -> . assignable ASSIGN expression
    (17) statement -> . assignable ADDASSIGN expression
    (18) statement -> . assignable SUBASSIGN expression
    (19) statement -> . assignable MULASSIGN expression
    (20) statement -> . assignable DIVASSIGN expression
    (41) assignable -> . variable
    (42) assignable -> . reference
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    $end            reduce using rule 1 (program -> instructions .)
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 16

    instruction                    shift and go to state 17
    statement                      shift and go to state 4
    variable                       shift and go to state 7
    assignable                     shift and go to state 14
    reference                      shift and go to state 15

state 3

    (3) instructions -> instruction .

    IF              reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    {               reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> statement . ;

    ;               shift and go to state 18


state 5

    (5) instruction -> IF . ( rel_expression ) instruction ELSE instruction
    (6) instruction -> IF . ( rel_expression ) instruction

    (               shift and go to state 19


state 6

    (7) instruction -> FOR . variable ASSIGN expression : expression instruction
    (45) variable -> . ID

    ID              shift and go to state 16

    variable                       shift and go to state 20

state 7

    (41) assignable -> variable .
    (43) reference -> variable . [ expression ]
    (44) reference -> variable . [ multiple_expressions ]

    ASSIGN          reduce using rule 41 (assignable -> variable .)
    ADDASSIGN       reduce using rule 41 (assignable -> variable .)
    SUBASSIGN       reduce using rule 41 (assignable -> variable .)
    MULASSIGN       reduce using rule 41 (assignable -> variable .)
    DIVASSIGN       reduce using rule 41 (assignable -> variable .)
    ADD             reduce using rule 41 (assignable -> variable .)
    SUB             reduce using rule 41 (assignable -> variable .)
    MUL             reduce using rule 41 (assignable -> variable .)
    DIV             reduce using rule 41 (assignable -> variable .)
    DOTADD          reduce using rule 41 (assignable -> variable .)
    DOTSUB          reduce using rule 41 (assignable -> variable .)
    DOTMUL          reduce using rule 41 (assignable -> variable .)
    DOTDIV          reduce using rule 41 (assignable -> variable .)
    TRANSPOSE       reduce using rule 41 (assignable -> variable .)
    ,               reduce using rule 41 (assignable -> variable .)
    ;               reduce using rule 41 (assignable -> variable .)
    EQ              reduce using rule 41 (assignable -> variable .)
    GT              reduce using rule 41 (assignable -> variable .)
    LT              reduce using rule 41 (assignable -> variable .)
    GE              reduce using rule 41 (assignable -> variable .)
    LE              reduce using rule 41 (assignable -> variable .)
    NE              reduce using rule 41 (assignable -> variable .)
    ]               reduce using rule 41 (assignable -> variable .)
    )               reduce using rule 41 (assignable -> variable .)
    :               reduce using rule 41 (assignable -> variable .)
    IF              reduce using rule 41 (assignable -> variable .)
    FOR             reduce using rule 41 (assignable -> variable .)
    WHILE           reduce using rule 41 (assignable -> variable .)
    {               reduce using rule 41 (assignable -> variable .)
    PRINT           reduce using rule 41 (assignable -> variable .)
    RETURN          reduce using rule 41 (assignable -> variable .)
    CONTINUE        reduce using rule 41 (assignable -> variable .)
    BREAK           reduce using rule 41 (assignable -> variable .)
    ID              reduce using rule 41 (assignable -> variable .)
    [               shift and go to state 21


state 8

    (8) instruction -> WHILE . ( rel_expression ) instruction

    (               shift and go to state 22


state 9

    (9) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . statement ;
    (5) instruction -> . IF ( rel_expression ) instruction ELSE instruction
    (6) instruction -> . IF ( rel_expression ) instruction
    (7) instruction -> . FOR variable ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( rel_expression ) instruction
    (9) instruction -> . { instructions }
    (10) statement -> . PRINT expression
    (11) statement -> . PRINT multiple_expressions
    (12) statement -> . RETURN expression
    (13) statement -> . RETURN
    (14) statement -> . CONTINUE
    (15) statement -> . BREAK
    (16) statement -> . assignable ASSIGN expression
    (17) statement -> . assignable ADDASSIGN expression
    (18) statement -> . assignable SUBASSIGN expression
    (19) statement -> . assignable MULASSIGN expression
    (20) statement -> . assignable DIVASSIGN expression
    (41) assignable -> . variable
    (42) assignable -> . reference
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 16

    instructions                   shift and go to state 23
    instruction                    shift and go to state 3
    statement                      shift and go to state 4
    variable                       shift and go to state 7
    assignable                     shift and go to state 14
    reference                      shift and go to state 15

state 10

    (10) statement -> PRINT . expression
    (11) statement -> PRINT . multiple_expressions
    (27) expression -> . expression ADD expression
    (28) expression -> . expression SUB expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . SUB expression
    (36) expression -> . expression TRANSPOSE
    (37) expression -> . INTNUM
    (38) expression -> . FLOATNUM
    (39) expression -> . STRING
    (40) expression -> . assignable
    (46) expression -> . ( expression )
    (47) expression -> . vector
    (48) expression -> . matrix
    (57) multiple_expressions -> . expression , expression
    (58) multiple_expressions -> . multiple_expressions , expression
    (41) assignable -> . variable
    (42) assignable -> . reference
    (55) vector -> . [ expression ]
    (56) vector -> . [ multiple_expressions ]
    (49) matrix -> . ONES ( expression )
    (50) matrix -> . ONES ( expression , expression )
    (51) matrix -> . ZEROS ( expression )
    (52) matrix -> . ZEROS ( expression , expression )
    (53) matrix -> . EYE ( expression )
    (54) matrix -> . EYE ( expression , expression )
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 26
    INTNUM          shift and go to state 27
    FLOATNUM        shift and go to state 28
    STRING          shift and go to state 29
    (               shift and go to state 31
    [               shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ID              shift and go to state 16

    expression                     shift and go to state 24
    multiple_expressions           shift and go to state 25
    assignable                     shift and go to state 30
    vector                         shift and go to state 32
    matrix                         shift and go to state 33
    variable                       shift and go to state 7
    reference                      shift and go to state 15

state 11

    (12) statement -> RETURN . expression
    (13) statement -> RETURN .
    (27) expression -> . expression ADD expression
    (28) expression -> . expression SUB expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . SUB expression
    (36) expression -> . expression TRANSPOSE
    (37) expression -> . INTNUM
    (38) expression -> . FLOATNUM
    (39) expression -> . STRING
    (40) expression -> . assignable
    (46) expression -> . ( expression )
    (47) expression -> . vector
    (48) expression -> . matrix
    (41) assignable -> . variable
    (42) assignable -> . reference
    (55) vector -> . [ expression ]
    (56) vector -> . [ multiple_expressions ]
    (49) matrix -> . ONES ( expression )
    (50) matrix -> . ONES ( expression , expression )
    (51) matrix -> . ZEROS ( expression )
    (52) matrix -> . ZEROS ( expression , expression )
    (53) matrix -> . EYE ( expression )
    (54) matrix -> . EYE ( expression , expression )
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    ;               reduce using rule 13 (statement -> RETURN .)
    SUB             shift and go to state 26
    INTNUM          shift and go to state 27
    FLOATNUM        shift and go to state 28
    STRING          shift and go to state 29
    (               shift and go to state 31
    [               shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ID              shift and go to state 16

    expression                     shift and go to state 38
    assignable                     shift and go to state 30
    vector                         shift and go to state 32
    matrix                         shift and go to state 33
    variable                       shift and go to state 7
    reference                      shift and go to state 15

state 12

    (14) statement -> CONTINUE .

    ;               reduce using rule 14 (statement -> CONTINUE .)


state 13

    (15) statement -> BREAK .

    ;               reduce using rule 15 (statement -> BREAK .)


state 14

    (16) statement -> assignable . ASSIGN expression
    (17) statement -> assignable . ADDASSIGN expression
    (18) statement -> assignable . SUBASSIGN expression
    (19) statement -> assignable . MULASSIGN expression
    (20) statement -> assignable . DIVASSIGN expression

    ASSIGN          shift and go to state 39
    ADDASSIGN       shift and go to state 40
    SUBASSIGN       shift and go to state 41
    MULASSIGN       shift and go to state 42
    DIVASSIGN       shift and go to state 43


state 15

    (42) assignable -> reference .

    ASSIGN          reduce using rule 42 (assignable -> reference .)
    ADDASSIGN       reduce using rule 42 (assignable -> reference .)
    SUBASSIGN       reduce using rule 42 (assignable -> reference .)
    MULASSIGN       reduce using rule 42 (assignable -> reference .)
    DIVASSIGN       reduce using rule 42 (assignable -> reference .)
    ADD             reduce using rule 42 (assignable -> reference .)
    SUB             reduce using rule 42 (assignable -> reference .)
    MUL             reduce using rule 42 (assignable -> reference .)
    DIV             reduce using rule 42 (assignable -> reference .)
    DOTADD          reduce using rule 42 (assignable -> reference .)
    DOTSUB          reduce using rule 42 (assignable -> reference .)
    DOTMUL          reduce using rule 42 (assignable -> reference .)
    DOTDIV          reduce using rule 42 (assignable -> reference .)
    TRANSPOSE       reduce using rule 42 (assignable -> reference .)
    ,               reduce using rule 42 (assignable -> reference .)
    ;               reduce using rule 42 (assignable -> reference .)
    EQ              reduce using rule 42 (assignable -> reference .)
    GT              reduce using rule 42 (assignable -> reference .)
    LT              reduce using rule 42 (assignable -> reference .)
    GE              reduce using rule 42 (assignable -> reference .)
    LE              reduce using rule 42 (assignable -> reference .)
    NE              reduce using rule 42 (assignable -> reference .)
    ]               reduce using rule 42 (assignable -> reference .)
    )               reduce using rule 42 (assignable -> reference .)
    :               reduce using rule 42 (assignable -> reference .)
    IF              reduce using rule 42 (assignable -> reference .)
    FOR             reduce using rule 42 (assignable -> reference .)
    WHILE           reduce using rule 42 (assignable -> reference .)
    {               reduce using rule 42 (assignable -> reference .)
    PRINT           reduce using rule 42 (assignable -> reference .)
    RETURN          reduce using rule 42 (assignable -> reference .)
    CONTINUE        reduce using rule 42 (assignable -> reference .)
    BREAK           reduce using rule 42 (assignable -> reference .)
    ID              reduce using rule 42 (assignable -> reference .)


state 16

    (45) variable -> ID .

    [               reduce using rule 45 (variable -> ID .)
    ASSIGN          reduce using rule 45 (variable -> ID .)
    ADDASSIGN       reduce using rule 45 (variable -> ID .)
    SUBASSIGN       reduce using rule 45 (variable -> ID .)
    MULASSIGN       reduce using rule 45 (variable -> ID .)
    DIVASSIGN       reduce using rule 45 (variable -> ID .)
    ADD             reduce using rule 45 (variable -> ID .)
    SUB             reduce using rule 45 (variable -> ID .)
    MUL             reduce using rule 45 (variable -> ID .)
    DIV             reduce using rule 45 (variable -> ID .)
    DOTADD          reduce using rule 45 (variable -> ID .)
    DOTSUB          reduce using rule 45 (variable -> ID .)
    DOTMUL          reduce using rule 45 (variable -> ID .)
    DOTDIV          reduce using rule 45 (variable -> ID .)
    TRANSPOSE       reduce using rule 45 (variable -> ID .)
    ,               reduce using rule 45 (variable -> ID .)
    ;               reduce using rule 45 (variable -> ID .)
    EQ              reduce using rule 45 (variable -> ID .)
    GT              reduce using rule 45 (variable -> ID .)
    LT              reduce using rule 45 (variable -> ID .)
    GE              reduce using rule 45 (variable -> ID .)
    LE              reduce using rule 45 (variable -> ID .)
    NE              reduce using rule 45 (variable -> ID .)
    ]               reduce using rule 45 (variable -> ID .)
    )               reduce using rule 45 (variable -> ID .)
    :               reduce using rule 45 (variable -> ID .)
    IF              reduce using rule 45 (variable -> ID .)
    FOR             reduce using rule 45 (variable -> ID .)
    WHILE           reduce using rule 45 (variable -> ID .)
    {               reduce using rule 45 (variable -> ID .)
    PRINT           reduce using rule 45 (variable -> ID .)
    RETURN          reduce using rule 45 (variable -> ID .)
    CONTINUE        reduce using rule 45 (variable -> ID .)
    BREAK           reduce using rule 45 (variable -> ID .)
    ID              reduce using rule 45 (variable -> ID .)


state 17

    (2) instructions -> instructions instruction .

    IF              reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    {               reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 18

    (4) instruction -> statement ; .

    IF              reduce using rule 4 (instruction -> statement ; .)
    FOR             reduce using rule 4 (instruction -> statement ; .)
    WHILE           reduce using rule 4 (instruction -> statement ; .)
    {               reduce using rule 4 (instruction -> statement ; .)
    PRINT           reduce using rule 4 (instruction -> statement ; .)
    RETURN          reduce using rule 4 (instruction -> statement ; .)
    CONTINUE        reduce using rule 4 (instruction -> statement ; .)
    BREAK           reduce using rule 4 (instruction -> statement ; .)
    ID              reduce using rule 4 (instruction -> statement ; .)
    $end            reduce using rule 4 (instruction -> statement ; .)
    }               reduce using rule 4 (instruction -> statement ; .)
    ELSE            reduce using rule 4 (instruction -> statement ; .)


state 19

    (5) instruction -> IF ( . rel_expression ) instruction ELSE instruction
    (6) instruction -> IF ( . rel_expression ) instruction
    (21) rel_expression -> . expression EQ expression
    (22) rel_expression -> . expression GT expression
    (23) rel_expression -> . expression LT expression
    (24) rel_expression -> . expression GE expression
    (25) rel_expression -> . expression LE expression
    (26) rel_expression -> . expression NE expression
    (27) expression -> . expression ADD expression
    (28) expression -> . expression SUB expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . SUB expression
    (36) expression -> . expression TRANSPOSE
    (37) expression -> . INTNUM
    (38) expression -> . FLOATNUM
    (39) expression -> . STRING
    (40) expression -> . assignable
    (46) expression -> . ( expression )
    (47) expression -> . vector
    (48) expression -> . matrix
    (41) assignable -> . variable
    (42) assignable -> . reference
    (55) vector -> . [ expression ]
    (56) vector -> . [ multiple_expressions ]
    (49) matrix -> . ONES ( expression )
    (50) matrix -> . ONES ( expression , expression )
    (51) matrix -> . ZEROS ( expression )
    (52) matrix -> . ZEROS ( expression , expression )
    (53) matrix -> . EYE ( expression )
    (54) matrix -> . EYE ( expression , expression )
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 26
    INTNUM          shift and go to state 27
    FLOATNUM        shift and go to state 28
    STRING          shift and go to state 29
    (               shift and go to state 31
    [               shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ID              shift and go to state 16

    rel_expression                 shift and go to state 44
    expression                     shift and go to state 45
    assignable                     shift and go to state 30
    vector                         shift and go to state 32
    matrix                         shift and go to state 33
    variable                       shift and go to state 7
    reference                      shift and go to state 15

state 20

    (7) instruction -> FOR variable . ASSIGN expression : expression instruction

    ASSIGN          shift and go to state 46


state 21

    (43) reference -> variable [ . expression ]
    (44) reference -> variable [ . multiple_expressions ]
    (27) expression -> . expression ADD expression
    (28) expression -> . expression SUB expression
    (29) expression -> . expression MUL expression
    (30) expression -> . expression DIV expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . SUB expression
    (36) expression -> . expression TRANSPOSE
    (37) expression -> . INTNUM
    (38) expression -> . FLOATNUM
    (39) expression -> . STRING
    (40) expression -> . assignable
    (46) expression -> . ( expression )
    (47) expression -> . vector
    (48) expression -> . matrix
    (57) multiple_expressions -> . expression , expression
    (58) multiple_expressions -> . multiple_expressions , expression
    (41) assignable -> . variable
    (42) assignable -> . reference
    (55) vector -> . [ expression ]
    (56) vector -> . [ multiple_expressions ]
    (49) matrix -> . ONES ( expression )
    (50) matrix -> . ONES ( expression , expression )
    (51) matrix -> . ZEROS ( expression )
    (52) matrix -> . ZEROS ( expression , expression )
    (53) matrix -> . EYE ( expression )
    (54) matrix -> . EYE ( expression , expression )
    (45) variable -> . ID
    (43) reference -> . variable [ expression ]
    (44) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 26
    INTNUM          shift and go to state 27
    FLOATNUM        shift and go to state 28
    STRING          shift and go to state 29
    (               shift and go to state 31
    [               shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    ID              shift and go to state 16

    variable                       shift and go to state 7
    expression                     shift and go to state 47
    multiple_expressions           shift and go to state 48
